Crud operation of customers
