# routes/customerRout.js
@@ -4,5 +4,8 @@ const cc = require('../controllers/customerController')
 
 // Get customer data
 router.get('/get-customers', cc.getCustomers);
+router.post('/add-customers', cc.addCustomers);
+router.put('/update-customers/:id', cc.updateCustomers);
+router.delete('/delete-customers/:id', cc.deleteCustomers);
 
 module.exports = router;
